--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,8 +10,37 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 10px;
+}
+
 body {
   background-color: var(--background-colour);
   margin: 0px;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+header,
+main,
+footer {
+  font-size: 1.6rem;
+}
+
+header h1 {
+  font-size: 3rem;
+}
+
+main h2,
+footer h2 {
+  font-size: 2.5rem;
+}
+
+.card__container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card__item {
+  flex: 1 0 28%;
+  margin: 2rem;
 }
