--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,8 +26,16 @@ footer {
   font-size: 1.6rem;
 }
 
+header {
+  text-align: center;
+}
+
 header h1 {
   font-size: 3rem;
+}
+
+header p {
+  margin: 1rem 5rem;
 }
 
 main h2,
@@ -41,6 +49,12 @@ footer h2 {
 }
 
 .card__item {
-  flex: 1 0 28%;
+  flex: 1 0 30%;
   margin: 2rem;
+  text-align: center;
+  max-width: 30%;
+}
+
+pre {
+  text-align: left;
 }
