--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,6 +21,11 @@ body {
   min-height: 100vh;
 }
 
+.window__container {
+  display: flex;
+  flex-direction: column;
+}
+
 header,
 main,
 footer {
@@ -48,14 +53,15 @@ footer h2 {
 
 .card__container {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
 }
 
 .card__item {
-  flex: 1 0 30%;
+  flex: 1 0 25%;
   margin: 2rem;
   text-align: center;
-  max-width: 30%;
+  max-width: 25%;
   color: var(--glowing-pink);
 }
 
